.provarCaches/00D5f000005vwGkEAI/objects/rstk__povendrev__c.object
<CustomObject>
    <description>povendrev__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__povendrev_comments__c</fullName>
        <inlineHelpText>Vendor Revision comments</inlineHelpText>
        <label>comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__povendrev_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Division associated with this PO Revision</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>PO Vendor Revisions</relationshipLabel>
        <relationshipName>divpovendrevs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__povendrev_frmintrev__c</fullName>
        <inlineHelpText>From Internal Revision</inlineHelpText>
        <label>internal revision (from)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__povendrev_ordno__c</fullName>
        <inlineHelpText>This is the Purchase Order Number of the revision</inlineHelpText>
        <label>Order Number</label>
        <referenceTo>rstk__pohdr__c</referenceTo>
        <relationshipName>POVENDREVs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__povendrev_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>d. A Purchase Order line can only be added for the Main Site of the Division
(SYDIV_MAINSITE)</description>
        <inlineHelpText>This is the Site associated with this PO Revision</inlineHelpText>
        <label>site_ui</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>PO Vendor Revisions</relationshipLabel>
        <relationshipName>povendrevs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__povendrev_submitdate__c</fullName>
        <inlineHelpText>Submitted Date</inlineHelpText>
        <label>submit date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__povendrev_tointrev__c</fullName>
        <inlineHelpText>Internal Revision</inlineHelpText>
        <label>internal revision</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__povendrev_vendrev__c</fullName>
        <inlineHelpText>Vendor Revision</inlineHelpText>
        <label>vendor revision</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>PO Vendor Revision</label>
    <nameField>
        <label>POVENDREV Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PO Vendor Revisions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>